--- a/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
+++ b/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
@@ -11,7 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Airport.BLL\Airport.BLL.csproj" />
+    <ProjectReference Include="..\Airport.DAL\Airport.DAL.csproj" />
   </ItemGroup>
 
 </Project>
