Added core functionality

--- a/Airport.BLL/Airport.BLL.csproj
+++ b/Airport.BLL/Airport.BLL.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Airport.WebApi\Airport.Common\Airport.Common.csproj" />
     <ProjectReference Include="..\Airport.WebApi\Airport.DAL\Airport.DAL.csproj" />
   </ItemGroup>
 
