--- a/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
+++ b/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
@@ -13,10 +13,12 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Airport.BLL\Airport.BLL.csproj" />
+    <ProjectReference Include="..\Airport.Common\Airport.Common.csproj" />
     <ProjectReference Include="..\Airport.DAL\Airport.DAL.csproj" />
   </ItemGroup>
 
