--- a/Airport.WebApi/Airport.DAL/Airport.DAL.csproj
+++ b/Airport.WebApi/Airport.DAL/Airport.DAL.csproj
@@ -6,7 +6,14 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Airport.Common\Airport.Common.csproj" />
   </ItemGroup>
 
 </Project>
