--- a/Airport.WebApi/Airport.WebApi/appsettings.json
+++ b/Airport.WebApi/Airport.WebApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Contacts": {
+    "email": "rostyslav.diakiv@gmail.com",
+    "fullName": "Rostyslav Diakiv",
+    "webSite": "https://rostyslav-diakiv.github.io/homepage/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
