--- a/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
+++ b/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
@@ -15,11 +15,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\CrewsController.cs" />
-    <Compile Remove="Controllers\StewardessesController.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -32,9 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Airport.BLL\Airport.BLL.csproj" />
     <ProjectReference Include="..\..\Airport.Common\Airport.Common.csproj" />
-    <ProjectReference Include="..\..\AirportEf.BLL\AirportEf.BLL.csproj" />
-    <ProjectReference Include="..\..\AirportEf.DAL\AirportEf.DAL.csproj" />
+    <ProjectReference Include="..\..\Airport.DAL\Airport.DAL.csproj" />
   </ItemGroup>
 
 </Project>
