--- a/Airport.Common/Airport.Common.csproj
+++ b/Airport.Common/Airport.Common.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="7.6.104" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
