--- a/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
+++ b/Airport.WebApi/Airport.WebApi/Airport.WebApi.csproj
@@ -15,6 +15,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\CrewsController.cs" />
+    <Compile Remove="Controllers\DeparturesController.cs" />
+    <Compile Remove="Controllers\FlightsController.cs" />
+    <Compile Remove="Controllers\PlanesController.cs" />
+    <Compile Remove="Controllers\PlaneTypesController.cs" />
+    <Compile Remove="Controllers\StewardessesController.cs" />
+    <Compile Remove="Controllers\TicketsController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -29,9 +39,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Airport.BLL\Airport.BLL.csproj" />
     <ProjectReference Include="..\..\Airport.Common\Airport.Common.csproj" />
-    <ProjectReference Include="..\..\Airport.DAL\Airport.DAL.csproj" />
+    <ProjectReference Include="..\..\AirportEf.BLL\AirportEf.BLL.csproj" />
+    <ProjectReference Include="..\..\AirportEf.DAL\AirportEf.DAL.csproj" />
   </ItemGroup>
 
 </Project>
