Added few Integration and Unit Tests

--- a/Airport.WebApi/Airport.WebApi/appsettings.json
+++ b/Airport.WebApi/Airport.WebApi/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ROSTIKASUS\\ROSTIKSQLSERVER;Database=AirportDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ROSTIKASUS\\ROSTIKSQLSERVER;Database=AirportDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TestConnection": "Server=ROSTIKASUS\\ROSTIKSQLSERVER;Database=TestAirportDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "MigrationsAssembly": "AirportEf.DAL",
+
   "Contacts": {
     "email": "rostyslav.diakiv@gmail.com",
     "fullName": "Rostyslav Diakiv",
